# hardware-examples-kos

./: .gitignore  Dockerfile-1.1.1.40  Dockerfile-1.2.0.45  Dockerfile-1.2.0.89  LICENSE  Makefile  README.md
rpi4/bn-880/: CMakeLists.txt  cross-build-sim.sh  cross-build.sh
rpi4/bn-880/einit/: init_hw.yaml.in  init_qemu.yaml.in  security.psl.in
rpi4/bn-880/gps/: CMakeLists.txt  gps.cpp
rpi4/bn-880/nmea/: CMakeLists.txt
rpi4/bn-880/nmea/include/nmea/: sentence.hpp
rpi4/bn-880/resources/edl/: GPS.edl
rpi4/get-random-number/: CMakeLists.txt
rpi4/get-random-number/einit/: CMakeLists.txt  init_hw.yaml.in  init_qemu.yaml.in  security.psl.in
rpi4/get-random-number/resources/edl/: RN.edl
rpi4/get-random-number/rn/: CMakeLists.txt  main.cpp
